@@ -3170,12 +3170,16 @@ elf32_arm_size_dynamic_sections (output_bfd, info)
 	  asection ** spp;
 
 	  for (spp = &s->output_section->owner->sections;
-	       *spp != s->output_section;
+	       *spp != NULL;
 	       spp = &(*spp)->next)
-	    ;
-	  *spp = s->output_section->next;
-	  --s->output_section->owner->section_count;
-
+	    {
+	      if (*spp == s->output_section)
+		{
+		  bfd_section_list_remove (s->output_section->owner, spp);
+		  --s->output_section->owner->section_count;
+		  break;
+		}
+	    }
 	  continue;
 	}
 
